[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
thiserror = "1.0"
anyhow = "1.0"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.13.0"
log = "0.4"
vmm-sys-util = "0.11.1"
once_cell = "1.18.0"
utils = {version = "0.1.0", path = "../utils"}